# DataVis

./: README.md  pyproject.toml
UK Temperature/: braemar_heathrow_map.ipynb  braemar_temp_plotting.ipynb  heathrow_temp_plotting.ipynb  temp_plotting.ipynb
UK Temperature/Data/: Braemar.txt  Heathrow.txt  Reference.txt
UK Temperature/Figs/: map.html
